Add attractions and days
