# swagger/v1/swagger.yaml
@@ -4,15 +4,32 @@ info:
   title: API V1
   version: v1
 paths:
+  "/api/v1/calendar":
+    get:
+      summary: Fetches attractions for each day
+      tags:
+      - Calendar
+      parameters:
+      - name: Authorization
+        in: header
+        description: Bearer <token>
+        required: true
+        schema:
+          type: string
+      security:
+      - Bearer: {}
+      responses:
+        '401':
+          description: Cant find user for given token
+          content: {}
+        '200':
+          description: Returns attractions grupped by day
+          content: {}
   "/api/v1/locations":
     post:
       summary: Creates new location for pair
       tags:
       - Location
-      consumes:
-      - application/json
-      produces:
-      - application/json
       security:
       - Bearer: {}
       parameters:
@@ -22,49 +39,34 @@ paths:
         required: true
         schema:
           type: string
-      - name: data
-        in: body
-        required: true
-        schema:
-          type: object
-          properties:
-            lat:
-              type: string
-            lng:
-              type: string
-          required:
-          - lat
-          - lng
-          example:
-            lat: "-15.19750"
-            lng: '108.35723'
       responses:
         '401':
           description: Cant find user for given token
-          examples:
-            application/json:
-              error: Unauthorized
+          content: {}
         '200':
           description: Pair already finished race, location not created
-          examples:
-            application/json: {}
+          content: {}
         '201':
           description: Location created
-          examples:
-            application/json:
-              id: 283
-              lat: "-15.1975"
-              lng: '108.35723'
-              pair_id: 519
-              created_at: '2020-02-23T22:55:29.040Z'
-              updated_at: '2020-02-23T22:55:29.040Z'
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                lat:
+                  type: string
+                lng:
+                  type: string
+              required:
+              - lat
+              - lng
   "/api/v1/locations/latest":
     get:
       summary: Fetches last location for each pair
       tags:
       - Location
-      produces:
-      - application/json
       parameters:
       - name: Authorization
         in: header
@@ -77,156 +79,73 @@ paths:
       responses:
         '401':
           description: Cant find user for given token
-          examples:
-            application/json:
-              error: Unauthorized
+          content: {}
         '200':
           description: Returns locations sorted by ranking ASC
-          examples:
-            application/json:
-            - id: 287
-              lat: "-51.0"
-              lng: '126.0'
-              pair_id: 521
-              created_at: '2020-02-23T22:55:29.072Z'
-              updated_at: '2020-02-23T22:55:29.072Z'
-              pair:
-                id: 521
-                finished: false
-                pair_nr: 1
-                created_at: '2020-02-23T22:55:29.067Z'
-                updated_at: '2020-02-23T22:55:29.067Z'
-                users:
-                - id: 1041
-                  first_name: first_name13
-                  last_name: last_name13
-                  email: email13@example.org
-                  verified_login: false
-                  created_at: '2020-02-23T22:55:29.074Z'
-                  updated_at: '2020-02-23T22:55:29.074Z'
-                  phone: '576920332'
-                  is_phone_enabled: true
-                  city: Kraków
-                  pair_id: 521
-                  messenger:
-                  facebook: 'facebook.com/profile'
-                  avatar:
-              avatar:
-                - id: 1042
-                  first_name: first_name14
-                  last_name: last_name14
-                  email: email14@example.org
-                  verified_login: false
-                  created_at: '2020-02-23T22:55:29.076Z'
-                  updated_at: '2020-02-23T22:55:29.076Z'
-                  phone: '344143664'
-                  is_phone_enabled: true
-                  city: Kraków
-                  pair_id: 521
-                  messenger:
-                  facebook: 'facebook.com/profile'
-                  avatar:
+          content: {}
   "/api/v1/login":
     post:
       summary: Sends verification code
       tags:
       - Login
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - name: data
-        in: body
-        required: true
-        schema:
-          type: object
-          properties:
-            email:
-              type: string
-            pair_nr:
-              type: integer
-          required:
-          - email
-          - pair_nr
-          example:
-            email: john@example.org
-            pair_nr: 2
+      parameters: []
       responses:
         '200':
           description: Verification code was sent
+          content: {}
         '401':
           description: Wrong credentials, verification code wasn't sent
-          examples:
-            application/json:
-              error: Wrong credentials
+          content: {}
         '503':
           description: |-
             Error with connection to external api occured,
                            verification code wasn't sent
-          examples:
-            application/json:
-              error: Something went wrong
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                pair_nr:
+                  type: integer
+              required:
+              - email
+              - pair_nr
     patch:
       summary: Returns authentication token
       tags:
       - Login
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - name: data
-        in: body
-        required: true
-        schema:
-          type: object
-          properties:
-            email:
-              type: string
-            verification_code:
-              type: integer
-          required:
-          - email
-          - pair_nr
-          example:
-            email: john@example.org
-            verification_code: '123456'
+      parameters: []
       responses:
         '200':
           description: Verification code and emails are correct, token is returned
-          examples:
-            application/json:
-              token: eyJhbGciOiJIUzI1NiJ9.eyJ1c2VyX2lkIjoxMDQ3fQ.MeVxaA1Ldzy0ZqgwOHh8IaCIdUsgCOZlL0YlXt-qJEA
-              user:
-                id: 1047
-                first_name: first_name17
-                last_name: last_name17
-                email: john@example.org
-                verified_login: false
-                created_at: '2020-02-23T22:55:29.203Z'
-                updated_at: '2020-02-23T22:55:29.203Z'
-                phone: '731693897'
-                is_phone_enabled: true
-                city: Kraków
-                pair_id: 524
-                messenger:
-                facebook: 'facebook.com/profile'
-                avatar:
+          content: {}
         '401':
           description: |-
             Verification code and emails are incorrect,
                            error is returned
-          examples:
-            application/json:
-              error: No user matching credentials
+          content: {}
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                verification_code:
+                  type: integer
+              required:
+              - email
+              - pair_nr
   "/api/v1/profile":
     get:
       summary: Returns information about current user
       tags:
       - Profile
-      produces:
-      - application/json
       security:
       - Bearer: {}
       parameters:
@@ -239,35 +158,14 @@ paths:
       responses:
         '401':
           description: Cant find user for given token
-          examples:
-            application/json:
-              error: Unauthorized
+          content: {}
         '200':
           description: Returns serialized current_user
-          examples:
-            application/json:
-              id: 1049
-              first_name: first_name19
-              last_name: last_name19
-              email: email17@example.org
-              verified_login: false
-              created_at: '2020-02-23T22:55:29.233Z'
-              updated_at: '2020-02-23T22:55:29.233Z'
-              phone: '572069936'
-              is_phone_enabled: true
-              city: Kraków
-              pair_id: 525
-              messenger:
-              facebook: 'facebook.com/profile'
-              avatar: 
+          content: {}
     put:
       summary: Updates current user attributes
       tags:
       - Profile
-      consumes:
-      - multipart/form-data
-      produces:
-      - application/json
       security:
       - Bearer: {}
       parameters:
@@ -277,69 +175,18 @@ paths:
         required: true
         schema:
           type: string
-      - name: first_name
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: last_name
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: phone
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: city
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: messenger
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: avatar
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: facebook
-        required: false
-        in: formData
-        schema:
-          type: string
-      - name: is_phone_enabled
-        required: false
-        in: formData
-        schema:
-          type: bool
       responses:
         '401':
           description: Cant find user for given token
-          examples:
-            application/json:
-              error: Unauthorized
+          content: {}
         '200':
           description: updates and returns current_user json
-          examples:
-            application/json:
-              pair_id: 527
-              id: 1053
-              first_name: lol
-              last_name: lol
-              is_phone_enabled: true
-              city: Kraków
-              messenger:
-              facebook: 'facebook.com/profile'
-              verified_login: true
-              email: email21@example.org
-              created_at: '2020-02-23T22:55:29.282Z'
-              updated_at: '2020-02-23T22:55:29.294Z'
-              avatar: 
+          content: {}
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: string
 securityDefinitions:
   Bearer:
     type: apiKey
